<resources>
    <string name="app_name">Appointsy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_settings">Hello Settings!</string>
    <string name="hello_profile">Hello Profile!</string>
    <string name="hello_appoinment">Hello Appointments!</string>
    <string name="hello_business">Hello Business!</string>
    <string name="menu_businesses">Businesses</string>
    <string name="menu_appointments">Appointments</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>

    <string name="business_image">business image</string>
    <string name="indicate_if_business_is_open">Indicate if business is open</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="favorites">Favorites</string>
    <string name="location">Location</string>
    <string name="type_of_business">Type of Business</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="example_text">example text</string>
    <string name="coding_in_flow">Coding in Flow</string>
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="appointsy_developer">Appointsy Developer</string>
    <string name="sample_user_image">sample user image</string>
    <string name="appoinment">Appointment</string>
    <string name="sort_by_date">Sort by Date</string>
    <string name="sort_by_name">Sort By name</string>
    <string name="business">Business</string>
    <string name="services">Services</string>
    <string name="price">Price</string>
    <string name="booked">Booked</string>


    <string name="iconimage">iconImage</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="log_in">Log in</string>
    <string name="Register">Register</string>
    <string name="name">Name</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="confirm">Confirm</string>
    <string name="businessQ">Is this for a business?</string>
    <string name="cancel">Cancel</string>
    <string name="reschedule">Reschedule</string>
    <string name="appointments">Appointments</string>
    <string name="directions">Directions</string>
    <string name="scheduleAppt">Schedule an Appointment</string>
    <string name="username">Username</string>
    <string name="Example">Example</string>

    <string name="client_business">Client Business</string>
    <string name="day">day</string>
    <string name="year">year</string>
    <string name="complete">Complete</string>

    <string name="create_appointment">Create Appointment</string>
    <string name="scheduleTime">Choose the date and time</string>
    <string name="estimated_price">Estimated Price:</string>
    <string name="times">Times:</string>
    <string name="pomona_ca">Pomona,CA</string>
    <string name="ontario_ca">Ontario, CA</string>
    <string name="los_angeles_ca">Los Angeles, CA</string>
    <string name="search_for">Search for</string>
    <string name="choose_the_date">Choose the Date</string>
    <string name="choose_the_time">Choose the Time</string>
    <string name="schedule_it">Schedule It</string>

    <string name="darkMode">Dark mode</string>
    <string name="notifications">Notifications</string>
    <string name="credits">Credits</string>
    <string name="versionNumber">Version Number: 1.00.00</string>
    <string name="release_notes">Release Notes</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="appointsy_copyright_2021">Appointsy Copyright @ 2021</string>
    <string name="update_profile">Update Profile</string>
    <string name="bio">Bio</string>
    <string name="phone_number">Phone Number</string>
    <string name="user">User</string>

    <string name="ownerLabel">Owner: </string>


</resources>