<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/edit_name"
	android:layout_width="wrap_content" android:layout_height="wrap_content"
	android:layout_gravity="center" android:orientation="vertical" >

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="16dp"
		android:text="Create Appointment"
		android:textAlignment="center"
		android:textColor="@color/black"
		android:textSize="48sp" />

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/tiName"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
		android:hint="@string/name"
		android:layout_marginBottom="10dp">
		<com.google.android.material.textfield.TextInputEditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="textPersonName">

		</com.google.android.material.textfield.TextInputEditText>
	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/tiUsername"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
		android:hint="@string/username"
		android:layout_marginBottom="10dp"
		>
		<com.google.android.material.textfield.TextInputEditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="textEmailAddress"
			>

		</com.google.android.material.textfield.TextInputEditText>
	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/tiEmail"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
		android:hint="@string/email"
		android:layout_marginBottom="10dp">
		<com.google.android.material.textfield.TextInputEditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="textEmailAddress">

		</com.google.android.material.textfield.TextInputEditText>
	</com.google.android.material.textfield.TextInputLayout>

	<!--    set input type to password for endIconMode-->
	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/tiPassword"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
		android:hint="@string/password"
		android:layout_marginBottom="10dp">
		<com.google.android.material.textfield.TextInputEditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="textPassword">

		</com.google.android.material.textfield.TextInputEditText>
	</com.google.android.material.textfield.TextInputLayout>


	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/tiConfirmPassword"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
		android:hint="@string/confirmPassword"
		android:layout_marginBottom="10dp">
		<com.google.android.material.textfield.TextInputEditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="textPassword">

		</com.google.android.material.textfield.TextInputEditText>
	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/tiPhoneNum"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
		android:hint="@string/phoneNumber"
		android:layout_marginBottom="10dp">
		<com.google.android.material.textfield.TextInputEditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="phone">

		</com.google.android.material.textfield.TextInputEditText>

	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.checkbox.MaterialCheckBox
		android:id="@+id/cbBusiness"
		android:layout_width="250dp"
		android:layout_height="wrap_content"
		android:text="@string/businessQ"
		android:layoutDirection="rtl"
		android:textSize="18sp"
		android:checked="false"
		android:buttonTint="@color/purple_500"
		/>

	<com.google.android.material.button.MaterialButton
		android:id="@+id/btnConfirm"
		android:layout_width="match_parent"
		android:layout_height="60dp"
		android:textSize="20sp"
		android:backgroundTint="@color/lightGreen"
		android:text="@string/confirm"
		/>

</LinearLayout>
