<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
<RelativeLayout
    android:id="@+id/rlLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:padding="24dp"
    >

    <ImageView
        android:id="@+id/ivIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tiUsername"
        android:layout_alignParentStart="true"
        android:layout_marginStart="37dp"
        android:layout_marginBottom="26dp"
        android:contentDescription="@string/iconimage"
        android:src="@drawable/ic_iconcmpt" />

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tiUsername"
        android:layout_marginStart="11dp"
        android:layout_marginBottom="33dp"
        android:layout_toEndOf="@+id/ivIcon"
        android:text="@string/app_name"
        android:textColor="#000000"
        android:textSize="46sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tiPassword"
        android:layout_marginBottom="15dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/username"
        >
    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_centerInParent="true"
        app:endIconMode="password_toggle"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/tiPassword"
        android:text="@string/log_in"
        android:textSize="20sp"
        app:cornerRadius="5dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/lightGreen"
        />
    <com.google.android.material.button.MaterialButton
        android:layout_marginTop="12dp"
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/btnLogin"
        android:text="@string/Register"
        android:textSize="20sp"
        app:cornerRadius="5dp"
        android:backgroundTint="@color/lightBlue"
        />
</RelativeLayout>
</layout>